# fastpilot

./: .env.example  .gitignore  .gitingestignore  CLAUDE.md  DEPLOY.md  LICENSE  README.md  REMAINING.md  docker-compose.yml  prequalify.py  pyproject.toml  submission.md  video-transcript-orignal.md  video-transcript.md
.claude/: settings.json
.github/workflows/: ci.yml  publish-ghcr.yml
app/: Dockerfile  WATCHTOWER_PROOF.md  __init__.py  config.py  dogfood.py  formatting.py  logging_config.py  main.py  models.py  observability.py  railway.toml  redis_client.py  requirements.txt
app/augmentations/: __init__.py  agent_orchestrator.py  code_executor.py  rate_limit.py  security.py
app/components/: __init__.py  qdrant_hybrid_retriever.py  voyage_reranker.py
app/prompts/: __init__.py  registry.py  templates.py
app/services/: __init__.py  conversation.py  query_router.py  rag_pipeline.py  semantic_cache.py
docs/: augmentation-decisions.md  chunking-strategy.md  evaluation-strategy.md  iteration-log.md  production-decisions.md  retrieval-strategy.md  scoping.md
docs/opik/: README.md  prompt-versions.json
evaluations/: agent_tasks.json  dogfood_log.md
evaluations/eval_results/: agent_eval.json  agent_quality.json  cache_threshold.json  concurrent_soak.json  human_verification.json  production_parity.json  soak_session.json
evaluations/eval_results/agent_code/: depends.py  pydantic_validation.py  response_model.py
frontend/: Dockerfile  agent_view.py  api_client.py  app.py  feature_flags.py  playground_view.py  railway.toml  requirements.txt  styles.py
frontend/.streamlit/: config.toml
scripts/: 01_verify_environment.py  02_verify_collections.py  03_setup_redis.py  05_run_rag_eval.py  06_run_agent_eval.py  07_reindex_production.py  08_agent_quality_checks.py  09_human_verification_probes.py  10_cache_threshold_experiment.py  11_soak_session.py  12_concurrent_soak.py  _bootstrap.py  publish_wiki.py
tests/: conftest.py  test_agent.py  test_agent_endpoints.py  test_api.py  test_components.py  test_executor.py  test_frontend.py  test_integration.py  test_observability.py  test_pipeline.py  test_registry.py  test_security.py  test_services.py  test_smoke.py  test_sse_parser.py  test_units.py  test_visual.py
tests/visual/: stub_backend.py
wiki/: coding-conventions.md  component-architecture.md  endpoint-summary.md  feature-coverage.md  index.md  log.md  onboarding.md  overview.md  testing-strategy.md
wiki/plans/: README.md
wiki/raw/: README.md  openapi.json
