[project]
name = "fastpilot"
version = "1.0.0"
description = "FastPilot — a production RAG learning companion for FastAPI (Chat / Agent / Playground)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Sunkanmi Olawuwo" }]
license = { text = "MIT" }
dependencies = [
    # --- Backend runtime (mirrors app/requirements.txt) ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "haystack-ai>=2.16.1",
    "qdrant-haystack>=9.2.0",
    "fastembed-haystack>=1.5.0",
    "voyage-embedders-haystack>=1.8.0",
    "voyageai>=0.3.0",
    "google-genai-haystack>=2.1.1",
    "google-genai>=1.31.0",
    "qdrant-client>=1.12.0",
    "redis[hiredis]>=5.0.0",
    "opik>=0.1.0",
    # --- Frontend runtime (mirrors frontend/requirements.txt) ---
    "streamlit>=1.53.1",
    "streamlit-monaco>=0.1.3",
    "requests>=2.32.0",
]

[project.optional-dependencies]
# Hermetic unit-test + lint tooling. `uv sync --extra dev` then `uv run pytest`.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "fakeredis>=2.23",
    "ruff>=0.6",
]
# Visual regression screenshots (Playwright). Run with `-m visual` after
# `playwright install chromium`.
visual = ["playwright>=1.47"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "frontend"]  # `import app` + `import api_client`
# Default run is hermetic + instant: integration (needs redis-stack) and live
# (needs real keys) and visual (needs a browser) are excluded. CI enforces the
# coverage gate (--cov=app --cov-fail-under=90).
addopts = "-m 'not integration and not live and not visual' --strict-markers"
markers = [
    "integration: needs the local redis-stack test container (docker compose --profile test)",
    "live: needs real Qdrant/Voyage/Gemini/Opik credentials",
    "visual: Playwright browser screenshots (boots streamlit + stub backend; needs `playwright install chromium`)",
    "slow: long-running (e.g. executor timeout tests)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
    "evaluations/eval_results",  # captured agent code + eval JSON — evidence, not source
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
# Scripts deliberately import the sys.path bootstrap before app imports.
"scripts/*.py" = ["E402", "I001"]
# Prompt text is content, not code — don't police line length inside the templates.
"app/prompts/templates.py" = ["E501"]
